change the index of the components so they overlap correctly

--- a/src/components/UI/Backdrop.module.css
+++ b/src/components/UI/Backdrop.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 88;
+  z-index: 200;
 
   background-color: rgba(0, 0, 0, 0.5);
 
