--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -1,6 +1,6 @@
 .cart {
   position: fixed;
-  z-index: 100;
+  z-index: 300;
   background-color: white;
   top: 20%;
   left: 50%;
