--- a/src/components/meals/MoreInfo.module.css
+++ b/src/components/meals/MoreInfo.module.css
@@ -6,7 +6,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  z-index: 666;
+  z-index: 300;
   background-color: white;
   color: #232323;
   border-radius: 14px;
