--- a/src/components/navbar/BootstrapNavbar.module.css
+++ b/src/components/navbar/BootstrapNavbar.module.css
@@ -1,6 +1,6 @@
 .navbar {
   position: fixed !important;
-  z-index: 9999;
+  z-index: 100;
 
   display: flex;
   align-items: center;
